// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`.toBeVisible throws an error when expectation is not matched 1`] = `
"expect(element).not.toBeVisible()

Received element is visible:
  Object {
  "props": Object {
    "children": undefined,
    "testID": "test",
  },
}"
`;

exports[`.toBeVisible throws an error when expectation is not matched 2`] = `
"expect(element).toBeVisible()

Received element is not visible:
  Object {
  "props": Object {
    "children": undefined,
    "style": Object {
      "opacity": 0,
    },
    "testID": "test",
  },
}"
`;
